package SongCreatorWindow.Model.Events;

public interface IMusicEvent
{

}
