@startuml

title __EVENTS's Class Diagram__\n

  namespace SongCreatorWindow {
    namespace Model {
      namespace Events {
        interface SongCreatorWindow.Model.Events.IClickedEvent {
            {abstract} + onMusicSymbolClicked()
        }
      }
    }
  }
  

  namespace SongCreatorWindow {
    namespace Model {
      namespace Events {
        interface SongCreatorWindow.Model.Events.IModelEvent {
            {abstract} + onModelLoaded()
        }
      }
    }
  }
  

  namespace SongCreatorWindow {
    namespace Model {
      namespace Events {
        interface SongCreatorWindow.Model.Events.IMusicEvent {
        }
      }
    }
  }
  

  namespace SongCreatorWindow {
    namespace Model {
      namespace Events {
        interface SongCreatorWindow.Model.Events.IMusicSoundEditionEvent {
            {abstract} + onAccordNameChanged()
            {abstract} + onMusicSoundClearSelection()
            {abstract} + onMusicSoundConvertedToAccord()
            {abstract} + onMusicSoundConvertedToNote()
            {abstract} + onMusicSoundDeleted()
            {abstract} + onMusicSoundDurationChange()
            {abstract} + onMusicSoundHeightChange()
            {abstract} + onMusicSoundModified()
            {abstract} + onMusicSoundOccurrenceTimeChanged()
            {abstract} + onMusicSoundOccurrenceTimeChangedPreprocess()
            {abstract} + onMusicSoundSelectedToEdition()
            {abstract} + onMusicSoundTieCheck()
        }
      }
    }
  }
  

  namespace SongCreatorWindow {
    namespace Model {
      namespace Events {
        interface SongCreatorWindow.Model.Events.IPathEvent {
            {abstract} + onPathClearSelection()
            {abstract} + onPathClefChanged()
            {abstract} + onPathCreated()
            {abstract} + onPathDeleted()
            {abstract} + onPathNameRenamed()
        }
      }
    }
  }
  

  namespace SongCreatorWindow {
    namespace Model {
      namespace Events {
        interface SongCreatorWindow.Model.Events.ISoundEvent {
            {abstract} + onMusicSymbolAdded()
        }
      }
    }
  }
  

SongCreatorWindow.Model.Events.IMusicSoundEditionEvent -up-|> SongCreatorWindow.Model.Events.IMusicEvent
SongCreatorWindow.Model.Events.IModelEvent -up-|> SongCreatorWindow.Model.Events.IMusicEvent
SongCreatorWindow.Model.Events.IPathEvent -up-|> SongCreatorWindow.Model.Events.IMusicEvent
SongCreatorWindow.Model.Events.ISoundEvent -up-|> SongCreatorWindow.Model.Events.IMusicEvent

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
